--- a/RestaurantOtomation/RestaurantOtomation.csproj
+++ b/RestaurantOtomation/RestaurantOtomation.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Order_screen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Order_screen.Designer.cs">
+      <DependentUpon>Order_screen.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Waiters_login.cs">
