--- a/RestaurantOtomation/RestaurantOtomation.csproj
+++ b/RestaurantOtomation/RestaurantOtomation.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Cashier_Login.Designer.cs">
       <DependentUpon>Cashier_Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Class1.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
